# jdd

./: .gitignore  CONTRIBUTING  README.md  pyproject.toml  qrcodes  random_ordre_date.csv  random_passage.csv
.github/workflows/: python-test.yml
src/jdd/: main.py  names-to-emargement.py  stats.py
src/jdd/tests/: test_all.py  test_stats.py
src/jdd/tools/: auto_order.py  badge_name_to_tex.py  badges.py  init_files.py  qrcodes.py  signing_lists.py  stats.py
src/resource/: .~lock.Participants JDD sample.xlsx#  .~lock.Participants JDD.xlsx#  .~lock.tests_participants.xlsx#  Participants JDD sample.xlsx  list_ensma.tex  list_up.tex
src/tests/: test_all.csv  test_all.py  test_ensma.csv  tests_participants.xlsx  true_list_ensma.tex  true_list_up.tex  true_noms_up.csv
src/tex/: test.tex  test_noms_ensma.tex
