[build-system]
requires = [
    "setuptools",
    "pandas",
    "seaborn",
    "matplotlib"
]
build-backend = "setuptools.build_meta"

[project]
name = "jdd"
version = "0.0.1"
authors = [
    {name = "Haenn Quentin", email='quentin.haenn@ensma.fr'},
    {name = "Gaspard Thomas", email="thomas.gaspard@ensma.fr"},
]
description = "A small package to help organizing MIMME jdds"
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[projects.urls]
"Homepage" = "https://github.com/quentinhaenn/jdd"
"Bug Tracker" = "https://github.com/quentinhaenn/jdd/issues"
